--- a/app/test/index.html
+++ b/app/test/index.html
@@ -74,7 +74,7 @@
 			<!-- ONE-STEP START -->
 			<div class="step-slide step-slide-1">
 				<h3 class="step-slide__title">
-				Сколько Вам/ребенку лет?
+				Сколько ребенку лет?
 				</h3>
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
