--- a/app/index.html
+++ b/app/index.html
@@ -36,31 +36,33 @@
 		</div>
 	</header>
 
+	<section class="first">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h1 class="first-ttl">Танцевальный лагерь 2019 <span>для детей от 5 до 17 лет</span></h1>
+					<ul class="first-list">
+						<li class="first-list__item"><span>За 7 лет с нами отдохнуло более 3000 детей</span></li>
+						<li class="first-list__item"><span>3 заезда за лето 2019. Места ограничены</span></li>
+						<li class="first-list__item"><span>Танцевальные лагеря в Украине, Болгарии и Италии</span></li>
+					</ul>
+					<img src="img/first_img.png" alt="img" class="first-img img-r">
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="main">
-		<div class="flex">
-			<div class="flex-content">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-auto">
-							<img src="img/dance-ico2.png" alt="img" class="main__ico img-responsive">
-						</div>
-						<div class="col-auto">
-							<img src="img/dance-ico.png" alt="img" class="main__ico img-responsive">
-						</div>
-						<div class="col-auto">
-							<img src="img/dance-ico3.png" alt="img" class="main__ico img-responsive">
-						</div>
-						<div class="w-100"></div>
-						<div class="col-lg-10">
-							<h1 class="main__ttl">Танцевальный лагерь 2019 для детей от 5 до 17 лет<br>Узнай за <span>1 минуту</span> цены, даты заездов и подробные программы наших <span>детских танцевальных лагерей 2019</span></h1>
-							<h2 class="main__subttl">Ответьте всего на 4 вопроса <br class="d-sm-none d-block">за 1 минуту и получите:</h2>
-							<ul class="main-list clearfix">
-								<li class="main-list__li"><i>1</i>Подробные программы лагерей 2019 под Вашего ребенка</li>
-								<li class="main-list__li"><i>2</i>Стоимость путевок и даты выездов</li>
-							</ul>
-							<a data-type="ajax" data-src="test/index.html" href="javascript:;" class="main__btn fancybox">Подобрать лагерь<span>+получить цены и программы</span></a>
-						</div>
-					</div>
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-10">
+					<h1 class="main__ttl">Узнай за 1 минуту <span>цены, даты заездов и подробные программы</span> наших детских танцевальных лагерей 2019</h1>
+					<h2 class="main__subttl">Ответьте всего на 4 вопроса <br class="d-sm-none d-block">за 1 минуту и получите:</h2>
+					<ul class="main-list clearfix">
+						<li class="main-list__li"><span>Подробные программы лагерей 2019 под Вашего ребенка</span></li>
+						<li class="main-list__li"><span>Стоимость путевок, даты выездов и условия проживания</span></li>
+					</ul>
+					<a data-type="ajax" data-src="test/index.html" href="javascript:;" class="main__btn fancybox">Подобрать лагерь<span>+получить цены и программы</span></a>
 				</div>
 			</div>
 		</div>
