--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h1 class="first-ttl">Танцевальный лагерь 2019 <span>для детей от 5 до 17 лет</span></h1>
+					<h1 class="first-ttl">Танцевальный лагерь 2019 <span><i>для детей</i> от 5 до 17 лет</span></h1>
 					<ul class="first-list">
 						<li class="first-list__item"><span>За 7 лет с нами отдохнуло более 3000 детей</span></li>
 						<li class="first-list__item"><span>3 заезда за лето 2019. Места ограничены</span></li>
@@ -56,7 +56,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
-					<h1 class="main__ttl">Узнай за 1 минуту <span>цены, даты заездов и подробные программы</span> наших детских танцевальных лагерей 2019</h1>
+					<h1 class="main__ttl">Узнайте за 1 минуту <span>цены, даты заездов и подробные программы</span> наших детских танцевальных лагерей 2019</h1>
 					<h2 class="main__subttl">Ответьте всего на 4 вопроса <br class="d-sm-none d-block">за 1 минуту и получите:</h2>
 					<ul class="main-list clearfix">
 						<li class="main-list__li"><span>Подробные программы лагерей 2019 под Вашего ребенка</span></li>
