--- a/app/test/index.html
+++ b/app/test/index.html
@@ -23,7 +23,7 @@
 		<div class="form-container">
 			<img src="img/logo.png" alt="logo" class="header-line__logo">
 			<h2 class="header-line__title">
-				Узнай за 1 минуту цены, даты заездов и<br>подробные программы наших детских<br>танцевальных лагерей 2019
+				Узнайте за 1 минуту цены, даты заездов и<br>подробные программы наших детских<br>танцевальных лагерей 2019
 			</h2>
 		</div>
 	</div>
