--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h1 class="first-ttl">Танцевальный лагерь 2019 <span><i>для детей</i> от 5 до 17 лет</span></h1>
+					<h1 class="first-ttl">Танцевальный лагерь 2019 <span>для детей от 5 до 17 лет</span></h1>
 					<ul class="first-list">
 						<li class="first-list__item"><span>За 7 лет с нами отдохнуло более 3000 детей</span></li>
 						<li class="first-list__item"><span>3 заезда за лето 2019. Места ограничены</span></li>
