--- a/app/test/index.html
+++ b/app/test/index.html
@@ -201,7 +201,7 @@
 			<!-- ONE-STEP START -->
 			<div class="step-slide step-slide-4">
 				<h3 class="step-slide__title">
-				Какой бюджет на отдых ребенка Вам больше подойдет?
+				В какой ценовой категории Вам больше подойдет лагерь?
 				</h3>
 				<div class="step-slide__grid">
 
